# fkYAML

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  REUSE.toml  appveyor.yml  fkYAML.natvis  reuse.sh
.reuse/: README.md  (+1 more)
docs/: CMakeLists.txt  Doxyfile.in  Makefile  mkdocs.yml  requirements.txt
docs/docs/: index.md
docs/docs/api/: index.md  macros.md  node_type.md  operator_literal_yaml.md  yaml_version_type.md
docs/docs/home/: community_support.md  releases.md  supported_compilers.md
docs/docs/tutorials/: cmake_integration.md  index.md
docs/examples/: CMakeLists.txt  ex_basic_node_add_anchor_name.cpp  ex_basic_node_add_anchor_name.output  ex_basic_node_add_tag_name.cpp  ex_basic_node_alias_of.cpp  ex_basic_node_at_basic_node.cpp  ex_basic_node_at_compatible_type.cpp  ex_basic_node_at_compatible_type.output  ex_basic_node_begin.cpp  ex_basic_node_boolean_type.cpp  ex_basic_node_const_iterator.cpp  ex_basic_node_constructor_1.cpp  ex_basic_node_constructor_2.cpp  ex_basic_node_constructor_3.cpp  ex_basic_node_constructor_4.cpp  ex_basic_node_constructor_5.cpp  ex_basic_node_constructor_6.cpp  ex_basic_node_constructor_7.cpp  ex_basic_node_constructor_7.output  ex_basic_node_constructor_8.cpp  ex_basic_node_contains.cpp  ex_basic_node_copy_assignment_operator.cpp  ex_basic_node_deserialize_char_array.cpp  ex_basic_node_deserialize_docs_char_array.cpp  ex_basic_node_deserialize_docs_file_pointer.cpp  ex_basic_node_deserialize_docs_file_pointer.output  ex_basic_node_deserialize_docs_iterators.cpp  ex_basic_node_deserialize_docs_string.cpp  ex_basic_node_deserialize_file_pointer.cpp  ex_basic_node_deserialize_file_pointer.output  ex_basic_node_deserialize_iterators.cpp  ex_basic_node_deserialize_string.cpp  ex_basic_node_empty.cpp  ex_basic_node_empty.output  ex_basic_node_end.cpp  ex_basic_node_extraction_operator.cpp  ex_basic_node_float_number_type.cpp  ex_basic_node_get_anchor_name.cpp  ex_basic_node_get_anchor_name.output  ex_basic_node_get_tag_name.cpp  (+89 more)
docs/mkdocs/: Makefile  mkdocs.yml  requirements.txt
docs/mkdocs/docs/: index.md  tutorials.md
examples/: CMakeLists.txt
examples/apis/: CMakeLists.txt  input.yaml  input_multi.yaml
examples/apis/basic_node/: CMakeLists.txt  add_anchor_name.cpp  add_tag_name.cpp  add_tag_name.output  alias_of.cpp  as_bool.cpp  as_float.cpp  as_float.output  as_int.cpp  as_int.output  as_map.cpp  as_map.output  as_seq.cpp  as_seq.output  as_str.cpp  as_uint.cpp  as_uint.output  at_basic_node.cpp  at_compatible_type.cpp  begin.cpp  boolean_type.cpp  constructor_1.cpp  constructor_2.cpp  constructor_3.cpp  constructor_4.cpp  constructor_5.cpp  constructor_6.cpp  constructor_6.output  constructor_7.cpp  contains.cpp  copy_assignment_operator.cpp  copy_assignment_operator.output  deserialize_char_array.cpp  deserialize_docs_char_array.cpp  deserialize_docs_file_pointer.cpp  deserialize_docs_iterators.cpp  deserialize_docs_string.cpp  (+82 more)
examples/tutorials/: CMakeLists.txt  example.yaml  tutorial_1.cpp  tutorial_1.output  tutorial_2.cpp  tutorial_3.cpp  tutorial_4.cpp
test/: CMakeLists.txt
test/cmake_add_subdirectory_test/: CMakeLists.txt
test/cmake_fetch_content_test/: CMakeLists.txt
test/cmake_find_package_test/: CMakeLists.txt
test/cmake_target_include_directories_test/: CMakeLists.txt
test/node_class_test/: CMakeLists.txt  NodeClassTest.cpp  NodeClassTest.hpp  main.cpp
test/unit_test/: CMakeLists.txt  DeserializerClassTest.cpp  DeserializerTest.cpp  DeserializerTest.hpp  ExceptionClassTest.cpp  IteratorClassTest.cpp  LexicalAnalyzerClassTest.cpp  LexicalAnalyzerTest.cpp  LexicalAnalyzerTest.hpp  NodeClassTest.cpp  NodeClassTest.hpp  OrderedMapClassTest.cpp  SerializerClassTest.cpp  main.cpp  test_custom_from_node.cpp  test_deserializer_class.cpp  test_encode_detector.cpp  test_exception_class.cpp  test_from_string.cpp  test_input_adapter.cpp  test_input_handler.cpp  test_iterator_class.cpp  test_lexical_analyzer_class.cpp  test_node_attrs.cpp  test_node_class.cpp  test_node_ref_storage_class.cpp  test_node_type.cpp  test_ordered_map_class.cpp  test_position_tracker_class.cpp  test_reverse_iterator_class.cpp  test_scalar_conv.cpp  test_scalar_parser_class.cpp  test_scalar_scanner_class.cpp  test_serializer_class.cpp  test_str_view_class.cpp  test_string_formatter.cpp  test_tag_resolver_class.cpp  test_uri_encoding_class.cpp  test_utf8_encoding_class.cpp  test_utf_encode_detector.cpp  (+3 more)
test/yaml_test_suite_runner/: CMakeLists.txt  main.cpp  skip_test_case_list.hpp  stream_event_callback.hpp  stream_event_source.hpp  stream_parse_engine.hpp
tests/: CMakeLists.txt  main.cpp
tests/cmake_find_package_test/: CMakeLists.txt
tests/cmake_target_include_directories_test/: CMakeLists.txt
tests/unit_test/: CMakeLists.txt  main.cpp  test_custom_from_node.cpp  test_deserializer_class.cpp  test_exception_class.cpp  test_input_adapter.cpp  test_iterator_class.cpp  test_lexical_analyzer_class.cpp  test_node_attrs.cpp  test_node_attrs_uint.cpp  test_node_class.cpp  test_node_class_uint.cpp  test_node_ref_storage_class.cpp  test_node_type.cpp  test_ordered_map_class.cpp  test_position_tracker_class.cpp  test_reverse_iterator_class.cpp  test_scalar_conv.cpp  test_scalar_parser_class.cpp  test_scalar_parser_class_uint.cpp  test_scalar_scanner_class.cpp  test_serializer_class.cpp  test_str_view_class.cpp  test_string_formatter.cpp  test_string_serialize_deserialize.cpp  test_tag_resolver_class.cpp  test_uri_encoding_class.cpp  test_utf_encode_detector.cpp  test_utf_encodings.cpp  test_yaml_escaper_class.cpp  test_yaml_version_type.cpp
tests/yaml_test_suite_runner/: CMakeLists.txt  skipped_cases.hpp  test_deserialize.cpp  yaml_test_suite_dir.hpp.in
tool/clang_tidy/: CMakeLists.txt  ClangTidyHelper.cpp  clang_tidy_helper.cpp
tool/iwyu/: CMakeLists.txt  IWYUHelper.cpp.in  iwyu_helper.cpp.in
tools/benchmark/: CMakeLists.txt  README.md  main.cpp
tools/clang_tidy/: CMakeLists.txt
tools/iwyu/: CMakeLists.txt
(+438 files in other folders)
