file(GLOB_RECURSE TUT_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(TUT_SRC_FILE ${TUT_SRC_FILES})
  file(RELATIVE_PATH REL_TUT_SRC_FILE ${CMAKE_CURRENT_SOURCE_DIR} ${TUT_SRC_FILE})
  string(REPLACE ".cpp" "" TUT_SRC_FILE_BASE ${REL_TUT_SRC_FILE})
  add_executable(${TUT_SRC_FILE_BASE} ${TUT_SRC_FILE})
  target_link_libraries(${TUT_SRC_FILE_BASE} example_common_config)

  add_custom_command(
    TARGET ${TUT_SRC_FILE_BASE}
    POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/example.yaml $<TARGET_FILE_DIR:${TUT_SRC_FILE_BASE}>
    COMMAND $<TARGET_FILE:${TUT_SRC_FILE_BASE}> > ${CMAKE_CURRENT_SOURCE_DIR}/${TUT_SRC_FILE_BASE}.output
    WORKING_DIRECTORY $<TARGET_FILE_DIR:${TUT_SRC_FILE_BASE}>
  )
endforeach()
